# mirea-sql-practice-5-rs

./: .gitignore  Cargo.toml
src/: app.rs  logger.rs  main.rs
