[package]
name = "sql_practice_5"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/tuguzT/sql_practice_5"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.0"
