[package]
name = "sql_practice_5"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/tuguzT/sql_practice_5"
readme = "README.md"
edition = "2021"

[dependencies]
eframe = "0.15"
chrono = "0.4"
log = "0.4"
log4rs = "1.0"
log-panics = { version = "2.0", features = ["with-backtrace"] }
